Fix scrolling bug on iOS safari

--- a/assets/src/sass/styles.scss
+++ b/assets/src/sass/styles.scss
@@ -74,6 +74,10 @@ a {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+
+  /* Fix iOS Safari scroll bug */
+  overflow-y: scroll; 
+  -webkit-overflow-scrolling: touch;
 }
 
 .viewport {
